12 test is solved